--- a/about.html
+++ b/about.html
@@ -1,24 +1,50 @@
-<p class="MsoNormal" style="margin-top:12.0pt;text-align:justify;line-height:
-200%"><span style="font-size:12.0pt;line-height:200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">The
-proposed system, "AreaFood," presents a significant improvement over
-the existing manual system of food ordering by introducing a digital platform
-that streamlines the ordering process, enhances convenience for customers, and
-improves operational efficiency for restaurants. By leveraging mobile
-technology and location-based services, the "AreaFood" application
-offers users in Anyigba a user-friendly interface for browsing menus, placing
-orders, and tracking deliveries directly from their smartphones. This digital
-solution eliminates the need for manual order taking and processing, reducing
-errors, and delays while providing real-time information about menu
-availability, pricing, and order status.<o:p></o:p></span></p><p style="margin-right: 0px; margin-bottom: 15px; margin-left: 0px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: " open="" sans",="" arial,="" sans-serif;="" font-size:="" 14px;"="">
+<h1 align="left" style="margin: 12pt 0in;"><a name="_Toc154319435"><span lang="EN-GB" style="font-size:13.0pt;line-height:200%">1.2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Statements
+of Problem</span></a><span class="apple-style-span"><span lang="EN-GB" style="font-size:13.0pt;line-height:
+200%"><o:p></o:p></span></span></h1><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:
+12.0pt;margin-left:0in;text-align:justify;line-height:200%"><span class="apple-style-span"><span lang="EN-GB" style="font-size:13.0pt;line-height:
+200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">An attempt he traditional livestock
+trading process, which relies heavily on physical marketplaces, presents
+several significant challenges for both traders and buyers. These challenges
+include:<o:p></o:p></span></span></p><p class="MsoListParagraphCxSpFirst" style="margin-top:12.0pt;margin-right:0in;
+margin-bottom:12.0pt;margin-left:.5in;mso-add-space:auto;text-align:justify;
+text-indent:-.25in;line-height:200%;mso-list:l0 level1 lfo1"><!--[if !supportLists]--><span class="apple-style-span"><span style="font-size:13.0pt;line-height:200%;
+font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:&quot;Times New Roman&quot;">1.<span style="font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; font-size-adjust: none; font-kerning: auto; font-optical-sizing: auto; font-feature-settings: normal; font-variation-settings: normal; font-variant-position: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;Times New Roman&quot;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><!--[endif]--><span class="apple-style-span"><b><span style="font-size:13.0pt;line-height:
+200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">Limited Market Access:</span></b></span><span class="apple-style-span"><span style="font-size:13.0pt;line-height:200%;
+font-family:&quot;Times New Roman&quot;,&quot;serif&quot;"> Traders and buyers are often restricted
+to local markets, which limits the scope of potential transactions. <o:p></o:p></span></span></p><p class="MsoListParagraphCxSpMiddle" style="margin-top:12.0pt;margin-right:0in;
+margin-bottom:12.0pt;margin-left:.5in;mso-add-space:auto;text-align:justify;
+text-indent:-.25in;line-height:200%;mso-list:l0 level1 lfo1"><!--[if !supportLists]--><span class="apple-style-span"><span style="font-size:13.0pt;line-height:200%;
+font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:&quot;Times New Roman&quot;">2.<span style="font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; font-size-adjust: none; font-kerning: auto; font-optical-sizing: auto; font-feature-settings: normal; font-variation-settings: normal; font-variant-position: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;Times New Roman&quot;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><!--[endif]--><span class="apple-style-span"><b><span style="font-size:13.0pt;line-height:
+200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">High Transaction Costs:</span></b></span><span class="apple-style-span"><span style="font-size:13.0pt;line-height:200%;
+font-family:&quot;Times New Roman&quot;,&quot;serif&quot;"> The need for physical meetings between
+traders and buyers incurs costs related to transportation, accommodation, and
+time, which can be prohibitively expensive, especially for those in rural or
+remote areas.<o:p></o:p></span></span></p><p class="MsoListParagraphCxSpMiddle" style="margin-top:12.0pt;margin-right:0in;
+margin-bottom:12.0pt;margin-left:.5in;mso-add-space:auto;text-align:justify;
+text-indent:-.25in;line-height:200%;mso-list:l0 level1 lfo1"><!--[if !supportLists]--><span class="apple-style-span"><span style="font-size:13.0pt;line-height:200%;
+font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:&quot;Times New Roman&quot;">3.<span style="font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; font-size-adjust: none; font-kerning: auto; font-optical-sizing: auto; font-feature-settings: normal; font-variation-settings: normal; font-variant-position: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;Times New Roman&quot;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><!--[endif]--><span class="apple-style-span"><b><span style="font-size:13.0pt;line-height:
+200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">Inefficient Communication:</span></b></span><span class="apple-style-span"><span style="font-size:13.0pt;line-height:200%;
+font-family:&quot;Times New Roman&quot;,&quot;serif&quot;"> Traditional livestock markets often
+suffer from poor communication channels, leading to delays in negotiations and
+misunderstandings between parties.<o:p></o:p></span></span></p><p class="MsoNormal" style="margin-top:12.0pt;text-align:justify;line-height:
+200%">
 
-</p><p class="MsoNormal" style="margin-top:12.0pt;text-align:justify;line-height:
-200%"><span style="font-size:12.0pt;line-height:200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">The
-"AreaFood" system introduces features such as real-time order
-tracking, online payment options, and personalized recommendations, which
-enhance the overall customer experience and satisfaction. Customers can track
-the progress of their orders in real-time, receive notifications about order
-status updates, and make secure payments electronically, eliminating the need
-for cash transactions and improving transaction security. Additionally, the
-system's integration with Google Maps and Google Location API enables users to
-discover nearby restaurants based on their current location, expanding their
-choice and accessibility of food options in Anyigba.<o:p></o:p></span></p>
+
+
+
+
+
+
+
+
+</p><p class="MsoListParagraphCxSpLast" style="margin-top:12.0pt;margin-right:0in;
+margin-bottom:12.0pt;margin-left:.5in;mso-add-space:auto;text-align:justify;
+text-indent:-.25in;line-height:200%;mso-list:l0 level1 lfo1"><!--[if !supportLists]--><span class="apple-style-span"><span style="font-size:13.0pt;line-height:200%;
+font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:&quot;Times New Roman&quot;">4.<span style="font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; font-size-adjust: none; font-kerning: auto; font-optical-sizing: auto; font-feature-settings: normal; font-variation-settings: normal; font-variant-position: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;Times New Roman&quot;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><!--[endif]--><span class="apple-style-span"><b><span style="font-size:13.0pt;line-height:
+200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">Security and Safety Concerns:</span></b></span><span class="apple-style-span"><span style="font-size:13.0pt;line-height:200%;
+font-family:&quot;Times New Roman&quot;,&quot;serif&quot;"> Conducting transactions in physical
+markets poses security risks, including theft and fraud.<o:p></o:p></span></span></p>
