--- a/welcome.html
+++ b/welcome.html
@@ -1,45 +1,22 @@
 <h2 style="margin-top:12.0pt;margin-right:0in;margin-bottom:8.0pt;margin-left:
 .5in;text-indent:-.5in;line-height:200%"><b><span style="font-size:12.0pt;
-line-height:200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;color:windowtext">1.1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Background of the Study<o:p></o:p></span></b></h2><p class="MsoNormal" style="margin-top:12.0pt;text-align:justify;line-height:
-200%"><span style="font-size:12.0pt;line-height:200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">The
-proposed system, "AreaFood," emerges against the backdrop of the
-increasing reliance on technology in various aspects of daily life, including
-food ordering and delivery services. With the proliferation of smartphones and
-the widespread availability of mobile applications, consumers have come to
-expect convenient and efficient ways to order food from their favorite
-restaurants. However, in many areas, traditional manual systems for food ordering
-and delivery remain prevalent, presenting challenges such as limited
-accessibility, inefficiency, and lack of real-time information. In response to
-these challenges, the "AreaFood" system seeks to modernize and
-digitize the food ordering process, leveraging mobile technology and
-location-based services to enhance the overall customer experience and
-streamline operations for restaurants amartha, (2020).<o:p></o:p></span></p><p class="MsoNormal" style="margin-top:12.0pt;text-align:justify;line-height:
-200%"><span style="font-size:12.0pt;line-height:200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">The
-development of "AreaFood" is also influenced by broader trends in the
-food delivery industry, including the rise of online food delivery platforms
-and the growing demand for convenience-driven services. As consumers
-increasingly turn to digital channels for their dining needs, there is a
-growing opportunity for innovative solutions that bridge the gap between
-restaurants and customers, offering seamless ordering experiences and
-personalized services. By harnessing the power of mobile technology and
-location-based services, "AreaFood" aims to meet the evolving needs
-and expectations of modern consumers while providing restaurants with tools to
-optimize their operations and reach a wider audience urama, (2021).<o:p></o:p></span></p><p style="margin-right: 0px; margin-bottom: 15px; margin-left: 0px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: " open="" sans",="" arial,="" sans-serif;="" font-size:="" 14px;"="">
+line-height:200%;font-family:" times="" new="" roman","serif";color:windowtext"="">1.1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Background of the Study<o:p></o:p></span></b></h2><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:
+12.0pt;margin-left:0in;text-align:justify;line-height:200%"><span lang="EN-GB" style="font-size:13.0pt;line-height:200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">Today’s
+Livestock trading is a critical component of the agricultural economy,
+particularly in regions where livestock farming is a primary source of income.
+Traditionally, this trade has relied heavily on physical marketplaces where
+buyers and sellers meet in person to negotiate prices and finalize
+transactions. However, these traditional methods are fraught with challenges,
+including high transaction costs, limited market access, and inefficiencies in
+communication and logistics Mwangi et al., (2020).<o:p></o:p></span></p><p class="MsoNormal" style="margin-top:12.0pt;text-align:justify;line-height:
+200%">
 
-
-
-
-
-</p><p class="MsoNormal" style="margin-top:12.0pt;text-align:justify;line-height:
-200%"><span style="font-size:12.0pt;line-height:200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">Furthermore,
-the proposed system is situated within the context of Anyigba and its unique
-characteristics as a community with its own set of challenges and opportunities
-in the food delivery space. By conducting a case study focusing on Anyigba
-restaurants, the research behind "AreaFood" seeks to understand the
-specific needs, preferences, and constraints of local residents and businesses
-Uzairu, (2010). This localized approach ensures that the "AreaFood"
-system is tailored to the context of Anyigba, taking into account factors such
-as local cuisines, cultural preferences, infrastructure limitations, and market
-dynamics. In doing so, "AreaFood" aims to not only improve the
-efficiency and convenience of food ordering in Anyigba but also contribute to
-the overall development and modernization of the local food delivery ecosystem.<o:p></o:p></span></p>
+</p><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:
+12.0pt;margin-left:0in;text-align:justify;line-height:200%"><span lang="EN-GB" style="font-size:13.0pt;line-height:200%;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;">The
+advent of digital technology has brought significant changes to various
+sectors, including agriculture. E-commerce platforms have revolutionized how
+goods and services are traded, offering convenience, efficiency, and broader
+market reach Okello, (2019). However, the livestock industry has been slow to
+adopt these digital innovations. The lack of specialized platforms tailored to
+the unique needs of livestock trading has been a major barrier to the digital
+transformation of this sector Nakamura &amp; Nkamnebe, (2021).<o:p></o:p></span></p>
